Stopped the title parts from wrapping

--- a/source/stylesheets/modules/m_header.css.scss
+++ b/source/stylesheets/modules/m_header.css.scss
@@ -1,6 +1,7 @@
 .m-header {
   > * {
     display: inline;
+    white-space: nowrap;
   }
 
   .subheader {
